--- a/src/components/layout/NavBar.module.css
+++ b/src/components/layout/NavBar.module.css
@@ -13,14 +13,14 @@
 
 .item{
     margin-right:1em ;
-    border-right:.8px solid #ffffff75 ;
     padding-right:12px ;
+    
 }
 
-.item:hover{
-    border:.8px solid rgb(248, 5, 5) ;
-    padding: 5px 10px 7px 10px;
-    border-radius: 10px;
+.item2{
+    margin-right:1em ;
+    padding-right:12px ;
+    
 }
 
 .item, a{
